remove JDK 8 code